--- a/website/deploy.yml
+++ b/website/deploy.yml
@@ -1,3 +1,4 @@
--name: delete old and execute docker run in test node
-docker -rm my-php-app --
-docker run -dit --name my-php-app -p 8081:8080 10.1.0.1:500/my-php-app:latest
+- name: delete old and execute docker run in test node
+  #hell: docker rmi my-php-app:latest
+  shell: docker -rm my-php-app
+  shell: docker run -dit --name my-php-app -p 8081:8080 1:5000my-php-app:"{{ tag }}"
