--- a/website/deploy.yml
+++ b/website/deploy.yml
@@ -1,4 +1,4 @@
 - name: delete old and execute docker run in test node
   #hell: docker rmi my-php-app:latest
-  shell: docker -rm my-php-app
-  shell: docker run -dit --name my-php-app -p 8081:8080 1:5000my-php-app:"{{ tag }}"
+  shell: docker rm my-php-app
+  shell: docker run -dit --name my-php-app -p 8081:8080 52.140.57.198:5000/my-php-app:"{{ tag }}"
