--- a/website/deploy.yml
+++ b/website/deploy.yml
@@ -1,4 +1,6 @@
-- name: delete old and execute docker run in test node
-  #hell: docker rmi my-php-app:latest
-  shell: docker rm my-php-app
-  shell: docker run -dit --name my-php-app -p 8081:8080 52.140.57.198:5000/my-php-app:"{{ tag }}"
+- hosts: test
+  tasks:
+    - name: delete old and execute docker run in test node
+      shell: docker rm my-php-app
+
+    - shell: docker run -dit --name my-php-app -p 8081:8080 52.140.57.198:5000/my-php-app:"{{ tag }}"
