--- a/website/deploy.yml
+++ b/website/deploy.yml
@@ -3,4 +3,4 @@
     - name: delete old and execute docker run in test node
       shell: sudo docker rm my-php-app
 
-    - shell: sudo docker run -dit --name my-php-app -p 8081:8080 52.140.57.198:5000/my-php-app:"{{ tag }}"
+      shell: sudo docker run -dit --name my-php-app -p 8081:8080 52.140.57.198:5000/my-php-app:"{{ tag }}"
