--- a/website/deploy.yml
+++ b/website/deploy.yml
@@ -4,5 +4,5 @@
   become_user: root
   tasks:
     - name: delete old con and create new container test srv
-      shell: docker rm my-php-app
-      shell: docker rm my-php-appsudo docker run -dit --name my-php-app -p 8081:8080 52.140.57.198:5000/my-php-app:"{{ tag }}"
+      shell: docker rm -f my-php-app
+      shell: docker rm -f my-php-appsudo docker run -dit --name my-php-app -p 8081:8080 52.140.57.198:5000/my-php-app:"{{ tag }}"
