--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -1,4 +1,5 @@
-FROM php:7.4-cli
-COPY src/.  /usr/src/myapp
-WORKDIR /usr/src/myapp
-CMD [ "php", "./your-script.php" ]
+FROM php:7.2-apache
+COPY src/ /var/www/html/
+#COPY . /usr/src/myapp
+#WORKDIR /usr/src/myapp
+#CMD [ "php", "./index.php" ]
