--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -1,5 +1,3 @@
-FROM php:7.2-apache
-COPY src/ /var/www/html/
-#COPY . /usr/src/myapp
-#WORKDIR /usr/src/myapp
-#CMD [ "php", "./index.php" ]
+FROM php:7.4-cli
+WORKDIR /usr/src/myapp
+CMD [ "php", "./your-script.php" ]
