--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -1,5 +1,6 @@
 FROM php:7.2-apache
 COPY src/ /var/www/html/
+RUN chmod -R 777 /var/www/html/
 #COPY . /usr/src/myapp
 #WORKDIR /usr/src/myapp
 #CMD [ "php", "./index.php" ]
