--- a/website/deploy.yml
+++ b/website/deploy.yml
@@ -5,4 +5,5 @@
   tasks:
     - name: delete old con and create new container test srv
       #shell: docker rm -f my-php-app        
-      shell: docker rm -f my-php-app && docker run -dt --name my-php-app -p 8081:80 52.140.57.198:5000/my-php-app:"{{ tag }}"
+      #shell: docker rm -f my-php-app && docker run -dt --name my-php-app -p 8081:80 52.140.57.198:5000/my-php-app:"{{ tag }}"
+      shell: kubectl apply -f .
