--- a/website/deploy.yml
+++ b/website/deploy.yml
@@ -6,5 +6,9 @@
     - name: delete old con and create new container test srv
       #shell: docker rm -f my-php-app        
       #shell: docker rm -f my-php-app && docker run -dt --name my-php-app -p 8081:80 52.140.57.198:5000/my-php-app:"{{ tag }}"
+      shell: pwd
       shell: kubectl apply -f .
       delegate_to: localhost
+  tasks:
+    - name: remote command
+      shell: df -h
