adding yaml for l8s

--- a/website/deploy.yml
+++ b/website/deploy.yml
@@ -12,3 +12,8 @@
   tasks:
     - name: remote command
       shell: df -h
+
+
+- name: k8s deploy create
+    tasks:
+    shell: kubectl apply -f . 
