adding yaml for l8s

--- a/website/deploy.yml
+++ b/website/deploy.yml
@@ -1,3 +1,4 @@
-- name: k8s deploy 
-  shell: kubectl apply -f . 
-  delegate_to: localhost
+tasks:
+  - name: k8s deploy 
+    shell: kubectl apply -f . 
+    delegate_to: localhost
