--- a/website/deploy.yml
+++ b/website/deploy.yml
@@ -1,4 +1,16 @@
-tasks:
-  - name: k8s deploy 
-    shell: kubectl apply -f . 
-    delegate_to: localhost
+- name: PHP service playbook
+  hosts: test
+  become: yes
+  become_user: root
+  tasks:
+    - name: delete old con and create new container test srv
+      #shell: docker rm -f my-php-app
+      #shell: docker rm -f my-php-app && docker run -dt --name my-php-app -p 8081:80 52.140.57.198:5000/my-php-app:"{{ tag }}"
+      shell: pwd
+        #shell: kubectl apply -f .
+        #delegate_to: localhost
+
+    - name: remote command
+      shell: kubectl apply -f .
+      delegate_to: localhost
+
